chenged custumer section

--- a/index.html
+++ b/index.html
@@ -7,41 +7,60 @@
     <link rel="stylesheet" href="/css/style.css" />
     <title>MagicNext</title>
   </head>
-  <body>
-    <div class="left"></div>
+  <body class="main__item">
+    <div class="left">salom</div>
     <div class="right">
-      <header class="hero">
-        <div class="hero__left">
-          <div class="hero__left--logo">
-            <img src="/img/logo.png" alt="" />
+      <header>
+        <div class="hero">
+          <div class="hero__left">
+            <div class="hero__left--logo">
+              <img src="/img/logo.png" alt="" />
+            </div>
+            <div class="title">your own home</div>
+            <div class="heading">The ultimate personal freedom</div>
+            <a href="#" class="btn hero__btn">view our properties</a>
+            <div class="hero__left--seen">
+              <div class="draw"></div>
+              <div class="hero__left--parag">Seen on</div>
+              <div class="draw"></div>
+            </div>
+            <div class="hero__left--footer grid4">
+              <img src="/img/logo-bbc.png" alt="" />
+              <img src="/img/logo-forbes.png" alt="" />
+              <img src="/img/logo-techcrunch.png" alt="" />
+              <img src="/img/logo-bi.png" alt="" />
+            </div>
           </div>
-          <div class="title">your own home</div>
-          <div class="heading">The ultimate personal freedom</div>
-          <a href="#" class="btn">view our properties</a>
-          <div class="hero__left--seen">
-            <div class="draw"></div>
-            <div class="hero__left-parag">Seen on</div>
-            <div class="draw"></div>
-          </div>
-          <div class="hero__left--footer">
-            <img src="/img/logo-bbc.png" alt="" />
-            <img src="/img/logo-forbes.png" alt="" />
-            <img src="/img/logo-techcrunch.png" alt="" />
-            <img src="/img/logo-bi.png" alt="" />
-          </div>
-        </div>
-        <div class="hero__right">
-          <div class="hero__right--realtors">
-            <div class="hero__right--item">
-              <img src="/img/realtor-1.jpeg" alt="" />
-              <img src="/img/realtor-2.jpeg" alt="" />
-              <img src="/img/realtor-3.jpeg" alt="" />
+          <div class="hero__right">
+            <div class="hero__right--realtors">
+              <h3 class="hero__right--realtors--heading">TOP 3 REALTORS</h3>
+              <div class="hero__right--item">
+                <img src="/img/realtor-1.jpeg" alt="" />
+                <div class="hero__right--item-name">
+                  <h3>Eril Fainer</h3>
+                  <p>245HOUSE SOLD</p>
+                </div>
+              </div>
+              <div class="hero__right--item">
+                <img src="/img/realtor-2.jpeg" alt="" />
+                <div class="hero__right--item-name">
+                  <h3>Eril Fainer</h3>
+                  <p>245HOUSE SOLD</p>
+                </div>
+              </div>
+              <div class="hero__right--item">
+                <img src="/img/realtor-3.jpeg" alt="" />
+                <div class="hero__right--item-name">
+                  <h3>Eril Fainer</h3>
+                  <p>245HOUSE SOLD</p>
+                </div>
+              </div>
             </div>
           </div>
         </div>
       </header>
       <main>
-        <section class="section__letters grid3">
+        <section class="section__letters grid3 container">
           <div class="section__letters--item">
             <h3 class="section__letters--heading">World`s best luxury homes</h3>
             <p class="paragraf">
@@ -95,7 +114,7 @@
             </p>
           </div>
         </section>
-        <section class="section__custumers">
+        <section class="section__custumers grid2">
           <div class="section__custumers--left">
             <img
               class="section__custumers--left--img-1"
@@ -109,19 +128,19 @@
             />
           </div>
           <div class="section__custumers--right">
-            <div class="title">happy custumers</div>
+            <div class="title section__custumers--title">happy custumers</div>
             <div class="heading custumers--heading">
               "The best decision of our lives"
             </div>
-            <div class="paragraf">
+            <div class="paragraf lorem">
               Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sunt
               atque illum obcaecati ea deserunt? Tempora, culpa nam?
             </div>
             <a href="#" class="btn">find your own home</a>
           </div>
         </section>
-        <section class="section__homes grid3">
-          <div class="section__homes--items">
+        <section class="section__homes">
+          <div class="section__homes--items grid3 container">
             <div class="section__homes--item">
               <img class="section__homes--img" src="/img/house-1.jpeg" alt="" />
               <h3 class="section__homes--heading">Beatiful Family House</h3>
@@ -205,21 +224,23 @@
         <section class="images"></section>
       </main>
       <footer>
-        <div class="footer__menus">
-          <ul>
-            <li><a href="#">find your dream hour</a></li>
-            <li><a href="#">request proposal</a></li>
-            <li><a href="#">download home planner</a></li>
-            <li><a href="#">contact us</a></li>
-            <li><a href="#">submit your property</a></li>
-            <li><a href="#">come work width us</a></li>
-          </ul>
+        <div class="container">
+          <div class="footer__menus">
+            <ul>
+              <li><a href="#">find your dream hour</a></li>
+              <li><a href="#">request proposal</a></li>
+              <li><a href="#">download home planner</a></li>
+              <li><a href="#">contact us</a></li>
+              <li><a href="#">submit your property</a></li>
+              <li><a href="#">come work width us</a></li>
+            </ul>
+          </div>
+          <p class="footer-paragraf">
+            &copy;Copy Right by MagicSoft Group. Lorem ipsum dolor, sit amet
+            consectetur adipisicing elit. Provident earum sint officia
+            molestiae, enim iure esse qui est.
+          </p>
         </div>
-        <p class="footer-paragraf">
-          &copy;Copy Right by MagicSoft Group. Lorem ipsum dolor, sit amet
-          consectetur adipisicing elit. Provident earum sint officia molestiae,
-          enim iure esse qui est.
-        </p>
       </footer>
     </div>
   </body>
