ended respose design

--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
     <title>MagicNext</title>
   </head>
   <body class="main__item">
-    <div class="left">salom</div>
+    <div class="left">
+      <div class="left__burger">
+        <span> </span>
+      </div>
+    </div>
     <div class="right">
       <header>
         <div class="hero">
@@ -34,25 +38,27 @@
           <div class="hero__right">
             <div class="hero__right--realtors">
               <h3 class="hero__right--realtors--heading">TOP 3 REALTORS</h3>
-              <div class="hero__right--item">
-                <img src="/img/realtor-1.jpeg" alt="" />
-                <div class="hero__right--item-name">
-                  <h3>Eril Fainer</h3>
-                  <p>245HOUSE SOLD</p>
+              <div class="hero__right--realtors--items">
+                <div class="hero__right--item">
+                  <img src="/img/realtor-1.jpeg" alt="" />
+                  <div class="hero__right--item-name">
+                    <h3>Eril Fainer</h3>
+                    <p>245HOUSE SOLD</p>
+                  </div>
                 </div>
-              </div>
-              <div class="hero__right--item">
-                <img src="/img/realtor-2.jpeg" alt="" />
-                <div class="hero__right--item-name">
-                  <h3>Eril Fainer</h3>
-                  <p>245HOUSE SOLD</p>
+                <div class="hero__right--item">
+                  <img src="/img/realtor-2.jpeg" alt="" />
+                  <div class="hero__right--item-name">
+                    <h3>Eril Fainer</h3>
+                    <p>245HOUSE SOLD</p>
+                  </div>
                 </div>
-              </div>
-              <div class="hero__right--item">
-                <img src="/img/realtor-3.jpeg" alt="" />
-                <div class="hero__right--item-name">
-                  <h3>Eril Fainer</h3>
-                  <p>245HOUSE SOLD</p>
+                <div class="hero__right--item">
+                  <img src="/img/realtor-3.jpeg" alt="" />
+                  <div class="hero__right--item-name">
+                    <h3>Eril Fainer</h3>
+                    <p>245HOUSE SOLD</p>
+                  </div>
                 </div>
               </div>
             </div>
@@ -152,10 +158,10 @@
                 <div class="section__homes-paragraf">325 m <sup>2</sup></div>
                 <div class="section__homes-paragraf">$ 1.200,000</div>
               </div>
-              <a href="#" class="btn">contact realtor</a>
+              <a href="#" class="btn homes__btn">contact realtor</a>
             </div>
             <div class="section__homes--item">
-              <img class="section__homes--img" src="/img/house-1.jpeg" alt="" />
+              <img class="section__homes--img" src="/img/house-2.jpeg" alt="" />
               <h3 class="section__homes--heading">Modern Glass Vila</h3>
               <div class="section__homes--list">
                 <div class="section__homes-paragraf">Canada</div>
@@ -165,7 +171,7 @@
                 <div class="section__homes-paragraf">450 m <sup>2</sup></div>
                 <div class="section__homes-paragraf">$ 1.750,000</div>
               </div>
-              <a href="#" class="btn">contact realtor</a>
+              <a href="#" class="btn homes__btn">contact realtor</a>
             </div>
             <div class="section__homes--item">
               <img class="section__homes--img" src="/img/house-3.jpeg" alt="" />
@@ -178,7 +184,7 @@
                 <div class="section__homes-paragraf">350 m <sup>2</sup></div>
                 <div class="section__homes-paragraf">$ 850,000</div>
               </div>
-              <a href="#" class="btn">contact realtor</a>
+              <a href="#" class="btn homes__btn">contact realtor</a>
             </div>
             <div class="section__homes--item">
               <img class="section__homes--img" src="/img/house-4.jpeg" alt="" />
@@ -191,7 +197,7 @@
                 <div class="section__homes-paragraf">480 m <sup>2</sup></div>
                 <div class="section__homes-paragraf">$ 1,950,000</div>
               </div>
-              <a href="#" class="btn">contact realtor</a>
+              <a href="#" class="btn homes__btn">contact realtor</a>
             </div>
             <div class="section__homes--item">
               <img class="section__homes--img" src="/img/house-5.jpeg" alt="" />
@@ -204,7 +210,7 @@
                 <div class="section__homes-paragraf">4250 m <sup>2</sup></div>
                 <div class="section__homes-paragraf">$ 9.500,000</div>
               </div>
-              <a href="#" class="btn">contact realtor</a>
+              <a href="#" class="btn homes__btn">contact realtor</a>
             </div>
             <div class="section__homes--item">
               <img class="section__homes--img" src="/img/house-6.jpeg" alt="" />
@@ -217,11 +223,83 @@
                 <div class="section__homes-paragraf">180 m <sup>2</sup></div>
                 <div class="section__homes-paragraf">$ 600,000</div>
               </div>
-              <a href="#" class="btn">contact realtor</a>
+              <a href="#" class="btn homes__btn">contact realtor</a>
             </div>
           </div>
         </section>
-        <section class="images"></section>
+        <section class="images grid8">
+          <img
+            class="images__item images__item--1"
+            src="/img/gal-1.jpeg"
+            alt=""
+          />
+          <img
+            class="images__item images__item--2"
+            src="/img/gal-2.jpeg"
+            alt=""
+          />
+
+          <img
+            class="images__item images__item--3"
+            src="/img/gal-3.jpeg"
+            alt=""
+          />
+          <img
+            class="images__item images__item--4"
+            src="/img/gal-4.jpeg"
+            alt=""
+          />
+          <img
+            class="images__item images__item--5"
+            src="/img/gal-5.jpeg"
+            alt=""
+          />
+          <img
+            class="images__item images__item--6"
+            src="/img/gal-6.jpeg"
+            alt=""
+          />
+          <img
+            class="images__item images__item--7"
+            src="/img/gal-7.jpeg"
+            alt=""
+          />
+          <img
+            class="images__item images__item--8"
+            src="/img/gal-8.jpeg"
+            alt=""
+          />
+          <img
+            class="images__item images__item--9"
+            src="/img/gal-9.jpeg"
+            alt=""
+          />
+          <img
+            class="images__item images__item--10"
+            src="/img/gal-10.jpeg"
+            alt=""
+          />
+          <img
+            class="images__item images__item--11"
+            src="/img/gal-11.jpeg"
+            alt=""
+          />
+          <img
+            class="images__item images__item--12"
+            src="/img/gal-12.jpeg"
+            alt=""
+          />
+          <img
+            class="images__item images__item--13"
+            src="/img/gal-13.jpeg"
+            alt=""
+          />
+          <img
+            class="images__item images__item--14"
+            src="/img/gal-14.jpeg"
+            alt=""
+          />
+        </section>
       </main>
       <footer>
         <div class="container">
@@ -235,7 +313,7 @@
               <li><a href="#">come work width us</a></li>
             </ul>
           </div>
-          <p class="footer-paragraf">
+          <p class="footer--paragraf">
             &copy;Copy Right by MagicSoft Group. Lorem ipsum dolor, sit amet
             consectetur adipisicing elit. Provident earum sint officia
             molestiae, enim iure esse qui est.
